manifests/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintrack-frontend
  namespace: fintrack
  labels:
    app: fintrack-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: fintrack-frontend
  template:
    metadata:
      labels:
        app: fintrack-frontend
    spec:
      containers:
        - name: frontend
          image: 203637463799.dkr.ecr.us-east-1.amazonaws.com/fintrack-frontend:1ba260d518935e043cd2d4f1e648b59a90bff044
          ports:
            - containerPort: 80

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
