manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fintrack-frontend
  namespace: fintrack
spec:
  type: ClusterIP
  selector:
    app: fintrack-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
