manifests/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintrack-ingress
  namespace: fintrack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: fintrack.qossim005.online
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fintrack-backend
                port:
                  number: 3001
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fintrack-frontend
                port:
                  number: 80
